# 2021-03-11_airbnb-api

./: README.md  pyproject.toml  requirements.txt
config/: authentication.py  settings.py  urls.py
rooms/: models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0002_auto_20210311_0242.py
